# topaz-sdk

./: CONTRIBUTING.md  README.md
.github/workflows/: ci.yml
go/: README.md  go.mod  go.sum
go/topaz/: client.go  client_test.go  contract_gen.go  slug.go  types.go
java/: README.md  settings.gradle.kts
java/runapi-topaz/: build.gradle.kts
java/runapi-topaz/src/main/java/ai/runapi/topaz/: TopazClient.java
java/runapi-topaz/src/main/java/ai/runapi/topaz/resources/: TopazResource.java  UpscaleImageResource.java  UpscaleVideoResource.java
java/runapi-topaz/src/main/java/ai/runapi/topaz/types/: Image.java  (+13 more)
java/runapi-topaz/src/test/java/ai/runapi/topaz/: TopazClientTest.java  TopazLiveApiSmokeTest.java  TopazLocalApiSmokeTest.java
js/: LICENSE  README.md  package.json
js/skills/topaz/: README.md  SKILL.md
js/src/: client.ts  contract_gen.ts  index.ts  types.ts
js/src/resources/: image-upscales.ts  upscale-image.ts  upscale-video.ts  video-upscales.ts
js/tests/unit/: image-upscales.test.ts  upscale-image.test.ts  upscale-video.test.ts  video-upscales.test.ts
python/: README.md  pyproject.toml
python/src/runapi/topaz/: __init__.py  client.py  contract_gen.py  types.py
python/src/runapi/topaz/resources/: __init__.py  upscale_image.py  upscale_video.py
python/tests/: test_client.py
ruby/: README.md  runapi-topaz.gemspec
ruby/lib/: runapi-topaz.rb
ruby/lib/runapi/: topaz.rb
ruby/lib/runapi/topaz/: client.rb  contract_gen.rb  types.rb
ruby/lib/runapi/topaz/resources/: image_upscales.rb  upscale_image.rb  upscale_video.rb  video_upscales.rb
